--- a/src/main/webapp/backoffice/order/list1/views/list1.ejs
+++ b/src/main/webapp/backoffice/order/list1/views/list1.ejs
@@ -1,10 +1,11 @@
+<% var groups = this.ordersGroupedByArticle; %>
 <% if ( this.length == 0 ) { %>
 	<li>There are no active orders at the moment.</li>
 <% } %>
 
+<input type="button" id="refreshList1" value="refresh"/>
 <b>Table by articles</b>
-
-<% for ( var i = 0; i < this.length; i++ ) { %>
-		<%== $.View( '//backoffice/order/list1/views/articleWithOrders.ejs', this[ i ] ) %>
+<% for ( var i = 0; i < groups.length; i++ ) { %>
+		<%== $.View( '//backoffice/order/list1/views/articleWithOrders.ejs', {group : groups[ i ],  openGroups : this.openGroups } ) %>
 <% } %>
 
