--- a/src/main/webapp/shop/referral/new/views/referralDetail.ejs
+++ b/src/main/webapp/shop/referral/new/views/referralDetail.ejs
@@ -11,8 +11,9 @@
 	</div>
 
 	<div class="input-form-row">
-		<label><%= msg( "referral.detail.recipientEmail" ) %>:</label> 
-		<input id="recipientEmail" type="text" value="">
+		<label><%= msg( "referral.detail.recipientEmails" ) %>:<br><br>
+		<span>(<%= msg( "referral.detail.recipientEmails_multiple" ) %>)</span></label> 
+		<textarea id="recipientEmail" type="text"></textarea>
 	</div>
 
 	<div class="input-form-row">
