--- a/src/main/webapp/common/form.css
+++ b/src/main/webapp/common/form.css
@@ -27,15 +27,19 @@
 
 .input-form label {
 	float: left;
-	width: 12em;
-	line-height: 160%;
+	width: 14em;
+	line-height: 100%;
 	color: gray;
 	font-size : 11pt;
 	text-align : right;
 	padding-right : .5em;
+	padding-top : 5px;
 	text-shadow: 0 1px 0 white;
 }
 
+.input-form label span {
+	font-size : 9pt;
+}
 
 .input-form input[type=text] {
 	width: 20em;
