--- a/src/main/webapp/shop/shop.css
+++ b/src/main/webapp/shop/shop.css
@@ -251,6 +251,11 @@ li.category {
 	================================================= 
 */
 
+#recipientEmail {
+	width : 25em;
+	height : 6em;
+}
+
 #referralMessage {
 	width : 25em;
 	height : 6em;
