--- a/src/main/webapp/backoffice/menu/edit/views/menuTable.ejs
+++ b/src/main/webapp/backoffice/menu/edit/views/menuTable.ejs
@@ -5,7 +5,10 @@
 			<td class="codeCell"></td>
 			<td class="articleCell"></td>
 			<td class="priceCell"></td>	
+			<td class="priceCell"></td>	
 			<td class="limitCell"></td>	
+			<td class="actionsCell"></td>	
+			<td class="actionsCell"></td>	
 			<td class="actionsCell"></td>	
 			<td class="actionsCell"></td>	
 		</tr>
