--- a/src/main/webapp/backoffice/order/list3/views/list3.ejs
+++ b/src/main/webapp/backoffice/order/list3/views/list3.ejs
@@ -1,9 +1,14 @@
-<% if ( this.length == 0 ) { %>
+<% var orders = this.ordersByDate; %>
+<% var checkedItems = this.checkedItems %>
+<% if ( orders.length == 0 ) { %>
 	<span>There are no active orders at the moment.</span>
 <% } %>
 
-<b>Table by date</b>
+<!--
+<input type="button" id="refreshList3" value="refresh"/>
+-->
 
+<b>Table by date</b>
 
 	<div class="headerRow">
 		<span class="orderItemSelector">
@@ -21,7 +26,7 @@
 		<div style="clear : both;"></div>
 	</div>
 
-<% for ( var i = 0; i < this.length; i++ ) { %>
-		<%== $.View( '//backoffice/order/list3/views/ordersByDate.ejs', this[ i ] ) %>
+<% for ( var i = 0; i < orders.length; i++ ) { %>
+		<%== $.View( '//backoffice/order/list3/views/ordersByDate.ejs', { order : orders[ i ], checkedItems : checkedItems } ) %>
 <% } %>
 
