--- a/src/main/webapp/backoffice/main/views/main.ejs
+++ b/src/main/webapp/backoffice/main/views/main.ejs
@@ -1,17 +1,19 @@
-		<h2>Lunch4You Back-office</h2>
-		<hr>
-		<div id="navigation">
-			<div id="tabSelectors" class="tab-selectors">
-				<div id="tabSelector1" class="tab-selector">Cooking</div> |
-				<div id="tabSelector2" class="tab-selector">Packaging</div> |
-				<div id="tabSelector3" class="tab-selector">Menu Administration</div>
+		<div id="backoffice-header" class="noPrint">
+			<h2>Lunch4You Back-office</h2>
+			<hr>
+			<div id="navigation">
+				<div id="tabSelectors" class="tab-selectors">
+					<div id="tabSelector1" class="tab-selector">Cooking</div> |
+					<div id="tabSelector2" class="tab-selector">Packaging</div> |
+					<div id="tabSelector3" class="tab-selector">Menu Administration</div>
+				</div>
+				<div id="menuNavigation" class="menu-navigation">
+					Menu: Weekly (<div id="menuLink" class="menu-link" menuType="restaurantWeekly" locale="en">EN</div> | <div id="menuLink" class="menu-link" menuType="restaurantWeekly" locale="cz">CZ</div>)
+					|
+					<div id="menuLink" class="menu-link" menuType="restaurantDaily">Daily</div>
+				</div>
+				<br>
 			</div>
-			<div id="menuNavigation" class="menu-navigation">
-				Menu - Restaurant (<div id="menuLink" class="menu-link" menuType="restaurantWeekly" locale="en">EN</div> | <div id="menuLink" class="menu-link" menuType="restaurantWeekly" locale="cz">CZ</div>)
-				|
-				<div id="menuLink" class="menu-link" menuType="restaurantDaily">Menu - Daily Special</div>
-			</div>
-			<br>
 		</div>
 		<div class="tab-contents">
 			<div id="tabContent0" style="display : block;" class="tab-content">
