--- a/src/main/webapp/shop/menu/list/views/list.ejs
+++ b/src/main/webapp/shop/menu/list/views/list.ejs
@@ -42,7 +42,7 @@
 				</td>
 				<td class="priceCell">
 					&nbsp;<br>
-					<%= article.price %>,- Kč
+					<%= article.priceDelivery %>,- Kč
 				</td>
 			</tr>
 		<% } %>
