--- a/src/main/webapp/shop/order/new/views/orderForm.ejs
+++ b/src/main/webapp/shop/order/new/views/orderForm.ejs
@@ -18,7 +18,7 @@
 	
 	<div class="input-form-row">
 		<label><%= msg( "order.detail.price" ) %>:</label>
-		<%= article.price %>,- CZK
+		<%= article.priceDelivery %>,- CZK
 	</div>
 
 	<div class="input-form-row">
