--- a/src/main/resources/META-INF/velocity/menuMailTemplate.vm
+++ b/src/main/resources/META-INF/velocity/menuMailTemplate.vm
@@ -56,7 +56,7 @@
 			</td>
 			<td class="priceCell">
 				<span class="nowrap">
-				${article.price},- CZK
+				${article.priceDelivery},- CZK
 				#if( ${category.id} == 1 or ${category.id} == 2)
 					<span class="special-price" title="Please refer to special prices note at the bottom of this email">***</span>
 				#end
