--- a/src/main/webapp/backoffice/order/list2/views/deliveryLocationWithArticles.ejs
+++ b/src/main/webapp/backoffice/order/list2/views/deliveryLocationWithArticles.ejs
@@ -6,33 +6,89 @@
 <% 
 // prepare array with all order ID's for this location. Will be used in delivery notification email
 var orderIds = new Array();
+
+// prepare categories for stats
+var categories_soups = [1];
+var categories_smallsalads = [2];
+
+// stats per location
+var count_soups = 0;
+var count_smallsalads = 0;
+var count_other = 0;
+
+
 for ( var i = 0; i < articlesWithOrders.length; i++ ) { 
 	var articleWithOrders = articlesWithOrders[i];
+	var article = articleWithOrders.entity;
+	var categoryId = article.category.id;
 	var orders = articleWithOrders.items;
+	
+	if($.inArray(categoryId, categories_soups) != -1){
+		count_soups += orders.length;
+	} else if($.inArray(categoryId, categories_smallsalads) != -1){
+		count_smallsalads += orders.length;
+	} else {
+		count_other += orders.length;
+	}
+	
 	for ( var j = 0; j < orders.length; j++ ) { 
 		var order = orders[j];
 		orderIds.push(order.id);
-	} 
+	}
 } 
 %>
 
-<td class="deliveryLocationCell">
-	<%= deliveryLocation.abbreviation %><br>
-	<%= countOrderItems %> <br>
-	<input type="button" class="delivery-notification-button" value="Notify"
-		orderIds="<%= orderIds.join(",") %>"
-	>
-</td>
+<div id="packagingLocation">
+<table id="packagingStatsTable">
+	<tr>
+		<td rowspan="2" class="deliveryLocationCell">
+			<%= deliveryLocation.abbreviation %>
+		</td>
+		<td class="stat-column">
+			Polévky
+		</td>
+		<td class="stat-column">
+			Saláty malé
+		</td>
+		<td class="stat-column">
+			Ostatní
+		</td>
+		<td class="stat-column">
+			Spolu
+		</td>
+		<td rowspan="2" class="dummy-column">
+			<input type="button" class="delivery-notification-button" value="Notify"
+				orderIds="<%= orderIds.join(",") %>"
+			>
+		</td>
+	</tr>
+	<tr>
+		<td class="stat-column">
+			<%= count_soups %>
+		</td>
+		<td class="stat-column">
+			<%= count_smallsalads %>
+		</td>
+		<td class="stat-column">
+			<%= count_other %>
+		</td>
+		<td class="stat-column">
+			<%= countOrderItems %>
+		</td>
+	</tr>
+</table>
 
-<td class="articlesCell">
+<table id="packagingTable">
 <% for ( var i = 0; i < articlesWithOrders.length; i++ ) { %>
 	<% var articleWithOrders = articlesWithOrders[i] %>
 	<% var article = articleWithOrders.entity %>
 	<% var orders = articleWithOrders.items %>
-	<table class="articlesTable">
 		<tr>
-			<td class="articleCell" style="padding : 2px;">
-				<%= article.name_cz %> - <%= orders.length %>
+			<td class="articleCountCell">
+				<%= orders.length %>
+			</td>
+			<td class="articleCell">
+				<%= article.name_cz %>
 			</td>
 			
 			<td class="ordersCell">
@@ -49,6 +105,6 @@ for ( var i = 0; i < articlesWithOrders.length; i++ ) {
 				</table>
 			</td>
 		</tr>
-	</table>
 <% } %>
-</td>
+</table>
+</div>
