--- a/src/main/webapp/shop/contacts/views/contacts.ejs
+++ b/src/main/webapp/shop/contacts/views/contacts.ejs
@@ -24,7 +24,7 @@
 			<!--img style="display:block;" src="map_OC_Ruze.jpg" alt="OC Ruze"></img-->
 			<br>
 			<!--iframe frameBorder="0" style="border:none" width="308" height="190" src="http://api4.mapy.cz/frame?w=308&amp;h=190&amp;x=14.491158201893061&amp;y=50.03060013573989&amp;z=15&amp;o=0&amp;url=http://www.mapy.cz/s/66Pb&amp;mini=1&amp;layer=1&amp;dx=14.491158201893061&amp;dy=50.03060013573989&amp;dt=čtvrť Praha 4, Praha, okres Hlavní město Praha" target="New Window"></iframe-->
-			<a href="http://www.mapy.cz/s/66Pb"><img src="http://www.mapy.cz/img/sharing-link-icon.png" width="88" height="31" border="0" alt="Najdete nás na mapy.cz"></a>
+			<a href="http://www.mapy.cz/s/66Pb" target="Lunch4you-Mapy.cz"><img src="http://www.mapy.cz/img/sharing-link-icon.png" width="88" height="31" border="0" alt="Najdete nás na mapy.cz"></a>
 		</td>
 	</tr>
 </div>
