--- a/src/main/webapp/common/register_customer/views/customerForm.ejs
+++ b/src/main/webapp/common/register_customer/views/customerForm.ejs
@@ -10,6 +10,8 @@
 
 <form id="customerForm" class="input-form" action="javascript:">
 
+	<div class="input-form-title"><%= msg( "form.title.profile" ) %></div>
+
 	<div class="input-form-row">
 		<label for="<%= firstNameId %>"><%= msg( "customer.registration.firstName" ) %>:</label>
 		<input type="text" name="firstName" id="<%= firstNameId %>" value="<%= user.firstName %>"/>
