--- a/src/main/webapp/backoffice/main/views/main.ejs
+++ b/src/main/webapp/backoffice/main/views/main.ejs
@@ -5,8 +5,7 @@
 				<div id="tabSelectors" class="tab-selectors">
 					<div id="tabSelector1" class="tab-selector">Cooking</div> |
 					<div id="tabSelector2" class="tab-selector">Packaging</div> |
-					<div id="tabSelector3" class="tab-selector">Menu Administration</div> |
-					<div id="tabSelector4" class="tab-selector">Label Printing</div>
+					<div id="tabSelector3" class="tab-selector">Menu Administration</div>
 				</div>
 				<div id="menuNavigation" class="menu-navigation">
 					Menu: Weekly (<div id="menuLink" class="menu-link" menuType="restaurantWeekly" locale="en">EN</div> | <div id="menuLink" class="menu-link" menuType="restaurantWeekly" locale="cz">CZ</div>)
@@ -32,8 +31,5 @@
 			</div>
 			<div id="tabContent2" style="display : none;">
 				<div id="menuEdit"></div>
-			</div>
-			<div id="tabContent3" style="display : none;">
-				<div id="labelPrinting"></div>
 			</div>
 		</div>
