--- a/src/main/webapp/backoffice/order/list3/views/list3.ejs
+++ b/src/main/webapp/backoffice/order/list3/views/list3.ejs
@@ -22,6 +22,10 @@
 		<span class="orderAction">
 			<span id="ordersActionButton" action="delete">delete</span>
 		</span>
+		|
+		<span class="orderAction">
+			<span id="ordersActionButton" action="print">print labels</span>
+		</span>
 		 	
 		<div style="clear : both;"></div>
 	</div>
