--- a/src/main/webapp/shop/main/views/page.ejs
+++ b/src/main/webapp/shop/main/views/page.ejs
@@ -15,8 +15,9 @@
 				<% if(Shop.customer){ %>
 				<a id="main-customer-link" href="javascript:"> <%= Shop.customer.firstName %> <%= Shop.customer.lastName %></a>
 				<% } else { %>
-					<%= msg( "main.navigation.anonymous") %>
+					<!-- <%= msg( "main.navigation.anonymous") %> -->
 					<!-- prepared for future
+					--> 
 					<a id="main-registration-link" href="javascript:"
 						title="<%= msg( "main.navigation.link.registration.title") %>"
 					><%= msg( "main.navigation.link.registration") %></a>
@@ -24,7 +25,6 @@
 					<a id="main-login-link" href="javascript:"
 						title="<%= msg( "main.navigation.link.login.title") %>"
 					><%= msg( "main.navigation.link.login") %></a>
-					-->
 				<% }%>
 			</span>
 			|
