veeela zmien, vacsinou registracia

--- a/src/main/webapp/shop/auth/register/views/registerForm.ejs
+++ b/src/main/webapp/shop/auth/register/views/registerForm.ejs
@@ -6,6 +6,8 @@
 
 	<div class="input-form-title"><%= msg( "form.title.register" ) %></div>
 
+	<div class="input-form-instruction"><%= msg( "customer.registration.instructions" ) %></div>
+
 	<div class="input-form-row">
 		<label for="<%= firstNameId %>"><%= msg( "customer.registration.firstName" ) %>:</label>
 		<input type="text" name="firstName" id="<%= firstNameId %>" value=""/>
