--- a/src/main/webapp/common/form.css
+++ b/src/main/webapp/common/form.css
@@ -20,6 +20,13 @@
 	padding : 10px;
 }
 
+.input-form-instruction {
+	color : black;
+	font-size : .8em;
+	padding : 10px;
+	margin-bottom : 10px;
+}
+
 .input-form-row {
 	padding : 2px 0px;
 	clear : both;
@@ -41,7 +48,7 @@
 	float: left;
 	width: 14em;
 	line-height: 100%;
-	color: gray;
+	Xcolor: darkgray;
 	font-size : 11pt;
 	text-align : right;
 	padding-right : .5em;
